<resources>
        <string name="app_name">Aidex CGM</string>
        <string name="title_activity_pair">PairActivity</string>
        <string name="first_fragment_label">First Fragment</string>
        <string name="second_fragment_label">Second Fragment</string>
        <string name="next">Next</string>
        <string name="previous">Previous</string>
        <string name="hello_first_fragment">Hello first fragment</string>
        <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
        <string name="error_1">Operation failed</string>
        <string name="error_2">Device not found</string>
        <string name="error_3">Connection failed</string>
        <string name="error_4">Communication timeout</string>
        <string name="error_5">Bluetooth is not turned on</string>
        <string name="error_6">Bluetooth permission is not granted</string>
        <string name="error_7">Calibration can only be performed after 6 hours of stable operation</string>
        <string name="error_8">Invalid appSecret</string>
        <string name="error_9">Network is unavailable, authorization failed</string>
        <string name="error_10">Pairing information already exists</string>
        <string name="error_11">CGMS is not paired</string>
        <string name="error_12">Task has been stopped, no permission to operate</string>
        <string name="error_13">Initialization failed</string>
        <string name="error_14">Invalid user SN number</string>
        <string name="error_16">Location services are turned off</string>
        <string name="error_17">Invalid SN identification code</string>
        <string name="error_18">Pairing has expired, please force unpair and re-pair</string>
        <string name="content_sensor_warm">Warming up</string>
        <string name="content_sensor_remain">Remaining %d minutes</string>
        <string name="tab_glucose">Blood Glucose Records</string>
        <string name="tab_startUp">Startup Records</string>
        <string name="tab_calibration">Calibration Records</string>
        <string name="tab_error">Fault Records</string>
        <string name="tab_expired">Expired Records</string>
        <string name="content_permission_have">Permission granted</string>
        <string name="content_permission_request">Request permission</string>
        <string name="content_init_succ">SDK initialized successfully</string>
        <string name="content_sdk_init">Initializing SDK</string>
        <string name="content_next_page">Go to the next page</string>
        <string name="content_next_page_error">Go to the next page with initialization failure</string>
        <string name="content_calibrate">Calibrate blood glucose value</string>
        <string name="content_calibrate_title">Calibrate</string>
        <string name="content_pair_info">Get pairing information</string>
        <string name="content_state_info">Get current state information</string>
        <string name="content_unpair">Unpair</string>
        <string name="content_close_task">Close task</string>
        <string name="content_open_task">Open task</string>
        <string name="content_trends">Trends</string>
        <string name="content_date_range">Time range</string>
        <string name="content_history">View blood glucose history</string>
        <string name="content_delete">Force delete transmitter</string>
        <string name="content_sensor_title">New sensor found, please confirm</string>
        <string name="content_sensor_new">New sensor</string>
        <string name="content_sensor_old">Old sensor</string>
        <string name="content_history_begin">History record start time:</string>
        <string name="content_history_end">History record end time:</string>
        <string name="content_history_empty">No records available</string>
        <string name="content_open_task_">Task permission is turned off</string>
        <string name="content_close_task_">Task permission is turned on</string>
        <string name="content_cgm_status">Transmitter current status:</string>
        <string name="content_perform_action">Are you sure you want to perform this action?</string>
        <string name="content_ok">OK</string>
        <string name="content_cancel">Cancel</string>
        <string name="content_cgm_change">Transmitter status has changed:</string>
        <string name="content_glucose_empty">Calibrated blood glucose value cannot be empty</string>
        <string name="content_calibrate_begin">Start calibrating blood glucose</string>
        <string name="content_calibrate_succ">Blood glucose calibration successful</string>
        <string name="content_sensor_new_begin">Start setting up a new sensor</string>
        <string name="content_sensor_new_succ">New sensor setup successful</string>
        <string name="content_sensor_old_begin">Start setting up an old sensor</string>
        <string name="content_sensor_old_succ">Old sensor setup successful</string>
        <string name="content_unpair_begin">Start unpairing</string>
        <string name="content_unpair_succ">Unpairing successful</string>
        <string name="content_delete_succ">Force delete successful</string>
        <string name="content_pair_device">Pair device</string>
        <string name="content_pair_succ">Pairing successful</string>
        <string name="content_pair_title">Enter device SN, pair transmitter</string>
        <string name="content_pair">Pair</string>
        <string name="content_history_change">Historical data has changed</string>
        <string name="trend_0">Blood glucose trend: Unknown</string>
        <string name="trend_1">Blood glucose rising rapidly</string>
        <string name="trend_2">Blood glucose rising</string>
        <string name="trend_3">Blood glucose rising slowly</string>
        <string name="trend_4">Blood glucose stable</string>
        <string name="trend_5">Blood glucose dropping slowly</string>
        <string name="trend_6">Blood glucose dropping</string>
        <string name="trend_7">Blood glucose dropping rapidly</string>
        <string name="remain_hour">Remaining %d hours</string>
        <string name="sensor_status_normal">Normal</string>
        <string name="sensor_status_error">Sensor malfunction</string>
        <string name="sensor_status_stable">Sensor stable</string>
        <string name="sensor_status_replace">Please replace the sensor</string>
        <string name="sensor_status_expiration">Sensor has expired</string>
        <string name="content_select_beginDate">Select start time</string>
        <string name="content_select_endDate">Select end time</string>
        <string name="content_search">Search</string>
        <string name="content_sn_empty">If the device SN is empty, it will query all device historical data</string>
        <string name="content_sensor_new_ota">New Sensor OTA</string>
        <string name="content_ota_sensor">Confirm new sensor with OTA check</string>
        <string name="content_ota_error">[OTA] Confirming new and old sensors failed</string>
        <string name="content_ota_succ">OTA upgrade successful</string>
</resources>