<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".HistoryActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingLeft="10dp"
            android:src="@drawable/ic_baseline_arrow_back_24" />

        <TextView
            android:id="@+id/txt_start"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/content_select_beginDate" />

        <TextView
            android:id="@+id/txt_end"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/content_select_endDate" />

        <Button
            android:id="@+id/btn_search"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/selector_btn_main"
            android:text="@string/content_search"
            android:textColor="@color/white" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#ddd" />

    <EditText
        android:id="@+id/et_sn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="40dp"
        android:hint="Input SN">

    </EditText>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/content_sn_empty"
        android:textColor="#999"
        android:textSize="12sp" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tab_glucose" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tab_startUp" />


        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tab_error" />


        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tab_expired" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tab_calibration" />


    </com.google.android.material.tabs.TabLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list_history"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="6dp" />

</LinearLayout>