<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <com.syarif.aidex_cgm.view.ScrollTextView
        android:id="@+id/txt_message"
        style="@style/txtDisyplay"
        android:layout_height="180dp" />

    <FrameLayout
        android:id="@+id/frag_cgms_status"
        android:layout_width="match_parent"
        android:layout_height="190dp"
        tools:ignore="MissingConstraints">

    </FrameLayout>


    <LinearLayout
        android:id="@+id/ll_sensor_new"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        android:visibility="gone">

        <Button
            android:id="@+id/btn_sensor_new"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/selector_btn_main"
            android:text="@string/content_sensor_new"
            android:textColor="@color/white"
            android:visibility="gone" />

        <Button
            android:id="@+id/btn_sensor_ota"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/selector_btn_main"
            android:text="@string/content_ota_sensor"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btn_sensor_old"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/selector_btn_main"
            android:text="@string/content_sensor_old"
            android:textColor="@color/white" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/ll_calibration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        android:visibility="visible">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:inputType="numberDecimal"
                android:paddingTop="20dp"
                android:paddingRight="10dp"
                android:paddingBottom="20dp"
                android:text="@string/content_calibrate"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/et_calibration_glucose"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/shape_input"
                android:hint="2~25"
                android:inputType="numberDecimal"
                android:paddingLeft="30dp"
                android:paddingTop="15dp"
                android:paddingRight="30dp"
                android:paddingBottom="15dp"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="6dp"
                android:inputType="numberDecimal"
                android:paddingTop="20dp"
                android:paddingRight="10dp"
                android:paddingBottom="20dp"
                android:text="mmol/L"
                android:textSize="20sp" />
        </LinearLayout>


        <Button
            android:id="@+id/btn_calibrate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/selector_btn_main"
            android:text="@string/content_calibrate_title"
            android:textColor="@color/white">

        </Button>

    </LinearLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="7dp"
        android:gravity="bottom">


        <Button
            android:id="@+id/btn_pair_info"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="@drawable/selector_btn_main"
            android:text="@string/content_pair_info"
            android:textColor="@color/white" />


        <Button
            android:id="@+id/btn_getInfo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="30dp"
            android:layout_weight="1"
            android:background="@drawable/selector_btn_main"
            android:text="@string/content_state_info"
            android:textColor="@color/white" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="7dp"
        android:gravity="bottom">

        <Button
            android:id="@+id/btn_unpair"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="@drawable/selector_btn_main"
            android:text="@string/content_unpair"
            android:textColor="@color/white" />


        <Button
            android:id="@+id/btn_task"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="@drawable/selector_btn_main"
            android:text="@string/content_close_task"
            android:textColor="@color/white" />


        <Button
            android:id="@+id/btn_trends"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="@drawable/selector_btn_main"
            android:text="@string/content_trends"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btn_date_range"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="@drawable/selector_btn_main"
            android:text="@string/content_date_range"
            android:textColor="@color/white" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:gravity="bottom">

        <Button
            android:id="@+id/btn_history"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="@drawable/selector_btn_main"
            android:text="@string/content_history"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btn_forceDelete"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="30dp"
            android:layout_weight="1"
            android:background="@drawable/selector_btn_main"
            android:text="@string/content_delete"
            android:textColor="@color/white" />

    </LinearLayout>


</LinearLayout>