<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.syarif.aidex_cgm.view.ScrollTextView
        android:id="@+id/txt_message"
        style="@style/txtDisyplay" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="@string/content_pair_title"
        android:textColor="#333"
        android:textSize="20sp" />

    <com.syarif.aidex_cgm.view.CEditText
        android:id="@+id/et_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:digits="0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
        app:circleRadius="4dp"
        app:focusLineColor="@color/colorPrimary"
        app:height="40dp"
        app:isDrawLine="true"
        app:lineColor="@color/colorPrimary"
        app:lineWidth="1dp"
        app:spaceWidth="5dp"
        app:textColor="@color/colorPrimary"
        app:textSize="22sp" />

    <Button
        android:id="@+id/btn_pair"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:background="@drawable/selector_btn_main"
        android:enabled="true"
        android:text="@string/content_pair"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/btn_next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/selector_btn_main"
        android:enabled="false"
        android:text="@string/content_next_page"
        android:textColor="@color/white" />

</LinearLayout>